--- a/pom.xml
+++ b/pom.xml
@@ -12,25 +12,31 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>3.2.1</version>
+            <version>${vertx-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
-            <version>3.2.1</version>
+            <version>${vertx-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-common</artifactId>
-            <version>3.2.1</version>
+            <version>${vertx-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-mysql-postgresql-client</artifactId>
-            <version>3.2.1</version>
+            <version>${vertx-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-jdbc-client</artifactId>
+            <version>${vertx-version}</version>
         </dependency>
 
         <dependency>
@@ -39,9 +45,24 @@
             <version>1.7.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1207</version>
+        </dependency>
+
 
 
     </dependencies>
+    <properties>
+        <vertx-version>3.2.1</vertx-version>
+    </properties>
 
     <build>
         <plugins>
@@ -52,6 +73,28 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.1.0</version>
+                <configuration>
+                    <sqlMigrationPrefix>v</sqlMigrationPrefix>
+                    <repeatableSqlMigrationPrefix>r</repeatableSqlMigrationPrefix>
+                    <url>jdbc:postgresql://localhost:5432/vertx</url>
+                    <user>postgres</user>
+                    <password>postgres</password>
+                    <locations>
+                        <location>filesystem:${basedir}/db/scripts</location>
+                    </locations>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>9.4.1207</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -68,7 +111,7 @@
                                 <transformer
                                     implementation = "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>io.vertx.core.Starter</Main-Class>
+                                        <Main-Class>io.vertx.core.Launcher</Main-Class>
                                         <Main-Verticle>cmd.MyFirstVerticle</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
